fix: production CORS and auth reliability with force-reset utility